Replace deprecated methods
- clazz.newInstance(): https://stackoverflow.com/questions/53257073/java-9-replace-class-newinstance
- new Long() by Long.valueOf()
- new Integer() by Integer.valueOf()
- new Integer() by Integer.parseInt()